--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
 	<h1>BitOxOx</h1>
 	<p>My Portfolio</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia nulla facilis, enim obcaecati sapiente magnam iste. Quas dolores, et vel culpa dicta rem corporis explicabo!</p>
 </body>
 </html>
