--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<h1>BitOxOx</h1>
-	<p>My Portfolio</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia nulla facilis, enim obcaecati sapiente magnam iste. Quas dolores, et vel culpa dicta rem corporis explicabo!</p>
+	<h1>Portfolio BitOxOX</h1>
 </body>
 </html>
