--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
 	<h1>Portfolio BitOxOX</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo autem, labore, consectetur ex eos nobis enim commodi provident itaque sapiente rerum minus odit vero, rem esse voluptates atque possimus non.</p>
 </body>
 </html>
