--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<h1>Portfolio BitOxOX</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo autem, labore, consectetur ex eos nobis enim commodi provident itaque sapiente rerum minus odit vero, rem esse voluptates atque possimus non.</p>
+	<div class="header">
+		<h1>Portfolio BitOxOX</h1>
+			<ul class="top_menu">
+				<li>Главная</li>
+				<li>Обо мне</li>
+				<li>Контакты</li>
+			</ul>
+	</div>
+	<div class="wrapper">
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos optio et ducimus quam veniam nam unde nemo minima incidunt doloribus.</p>
+	</div>
+	<div class="footer">
+		<p>lalala</p>
+	</div>
 </body>
 </html>
