--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos optio et ducimus quam veniam nam unde nemo minima incidunt doloribus.</p>
 	</div>
 	<div class="footer">
-		<p>lalala</p>
+		<p>Тут будет подвал</p>
 	</div>
 </body>
 </html>
